# open-av

./: .gitignore  .gitmodules  Cargo.toml  README.md  plot.py
blender/: cube.blend  cube.blend1
res/: cube.dae  cube.mtl
res/blender/: cube.blend  cube.dae
src/: av.rs  camera.rs  circle.rs  lib.rs  light.wgsl  main.rs  mesh.rs  model.rs  shader.wgsl  texture.rs
