[package]
name = "open-av"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.9"
pollster = "0.2"
image = "0.23"
# log = "0.4"
# tobj = "3.0"
wgpu = { version = "0.12.0", features = [ "spirv" ] }
winit = "0.26"
regex = "1"
collada = { path = "./external/piston_collada" }
# lazy_static = "1.4.0"
rustfft = "6.0.1"
rodio = "0.15.0"
# csv = "1.1.6"
serde = {version = "1.0.136", features = ["derive"]}
# socket2 = "0.4.4"
# http = "0.2.6"
# reqwest = {version = "0.11.9", features = ["blocking"]}
# serde_json = "1.0.78"
# plotters = {version = "0.3.1"}
# plotters-cairo = "0.3.1"
# cairo-rs = "0.15.1"
bincode = "1.3.3"
# tokio = { version = "1.12.0", features = ["full"] }
serde-pickle = "1.1.0"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"