[package]
name = "open-av"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.9"
log = "0.4.14"
pollster = "0.2"
image = "0.23"
cpal = "0.13.5"
wgpu = { version = "0.12.0", features = [ "spirv" ] }
winit = "0.26"
regex = "1"
collada = { path = "./external/piston_collada" }
rustfft = "6.0.1"
rodio = "0.15.0"
serde = {version = "1.0.136", features = ["derive"]}
bincode = "1.3.3"
serde-pickle = "1.1.0"
babycat = "0.0.12"
futures = "0.3.19"
async-std = "1.10.0"
tokio = { version = "1.16.1", features = ["full"] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"